# clife

./: README.md  clife.cabal
.github/workflows/: ci.yml
app/: Main.hs
boards/: acorn.json  glider-fleet.json  glider.json  gosper-glider-gun.json  gun-garden.json  highlife-glider.json  methuselah-garden.json  quad-fleet.json  r-pentomino.json  spacefield.json  twin-guns.json
lib/: Algorithm.hs  AlgorithmConway.hs  AlgorithmHighLife.hs  AlgorithmImpl.hs  Board.hs  BoardFile.hs  GameOfLife.hs  LifeLike.hs  TerminalControl.hs  TerminalRender.hs  TerminalUI.hs
