cabal-version:      3.0
name:               clife
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             tamiroh
maintainer:         tamiroh71@gmail.com
-- copyright:
build-type:         Simple
-- extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
        Algorithm
        AlgorithmConway
        AlgorithmHighLife
        AlgorithmImpl
        BoardFile
        Board
        LifeLike
        TerminalRender
        TerminalUI
    other-modules:
        TerminalControl
    -- other-extensions:
    build-depends:
        aeson,
        ansi-terminal,
        base ^>=4.18.3.0,
        bytestring,
        containers,
        text
    hs-source-dirs:   lib
    default-language: Haskell2010

executable clife
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.18.3.0,
        clife

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite clife-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.18.3.0,
        clife
